# web-portal-lite

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-THIRD-PARTY.txt  README.md  Rocket.toml  book.toml  docker-compose.yml  makefile  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  docs-publish.yml
docs/: 404.md  SUMMARY.md  cli.md  colors.md  contributing.md  icons.md  index.md  install.md  requirements.txt  usage.md
src/: args.rs  config.rs  main.rs  routes.rs  utils.rs
static/: colors.css  script.js  style.css
templates/: index.html.tera  login.html.tera  macros.html.tera
templates/partials/: base.html.tera
web-portal-lite/: Cargo.toml
web-portal-lite-cli/: Cargo.toml
web-portal-lite-cli/src/: args.rs  main.rs
web-portal-lite-core/: Cargo.toml
web-portal-lite-core/src/: lib.rs
web-portal-lite/src/: args.rs  config.rs  main.rs  password.rs  routes.rs  utils.rs
web-portal-lite/static/: script.js  style.css
