[package]
name = "web-portal-lite"
version = "1.2.0"
edition = "2021"

[dependencies]
# app config
serde = "1.0.165"
serde_yaml= "0.9.21"
# cli
clap = { version = "4.3.5", features = ["derive"] }
# password hashing
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]
