[package]
name = "web_portal_lite"
version = "0.1.0"
edition = "2021"

[dependencies]
web_portal_lite_core = { path="../web-portal-lite-core" }
serde = "1.0"
serde_yaml= "0.8"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
